--- a/main.html
+++ b/main.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	 <h1>JavaScript Class Inheritance Test</h1>
+     <p>Open the browser console (F12 → Console) to see the output.</p>
+<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
